# startrail-pipeline

./: .gitignore  AGENTS.md  AI_AGENT_MANUAL.md  CHANGELOG.md  CONTRIBUTING.md  README.en.md  README.md  process_photo_batch.sh  pyproject.toml  run_photo_test.sh
.github/workflows/: tests.yml
docs/: RAW.md  WORKFLOW.md
photos/: README.md
photos/input/: .gitkeep
startrail_pipeline/: __main__.py  cli.py  config.py  log_util.py  manifest.py  raw_backend.py
startrail_pipeline/commands/: analyze_.py  develop_.py  doctor_.py  gap_fill_.py  init_.py  inventory_.py  preview_.py  run_.py  select_.py  stack_.py
tests/: conftest.py  test_analyze.py  test_batch.py  test_doctor.py  test_gap_fill.py  test_init.py  test_inventory.py  test_raw.py  test_select.py  test_stack.py
