[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "startrail-pipeline"
version = "0.2.0"
description = "Star trail batch processing pipeline for macOS"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["astrophotography", "star-trails", "raw", "image-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "numpy>=1.24",
    "Pillow>=10.0",
    "tifffile>=2023.0",
]

[project.optional-dependencies]
raw = ["rawpy>=0.18"]

[project.scripts]
startrail = "startrail_pipeline.cli:main"

[tool.setuptools.packages.find]
include = ["startrail_pipeline*"]

[tool.setuptools.package-data]
"startrail_pipeline" = ["py.typed"]
