[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "startrail-pipeline"
version = "0.2.0"
description = "Safe, resumable, RAW-first star trail processing pipeline for macOS"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["astrophotography", "star-trails", "raw", "image-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "numpy>=1.24",
    "Pillow>=10.0",
    "tifffile>=2023.0",
]

[project.optional-dependencies]
raw = ["rawpy>=0.18"]

[project.urls]
Homepage = "https://github.com/ZMenggg/startrail-pipeline"
Documentation = "https://github.com/ZMenggg/startrail-pipeline/wiki"
Issues = "https://github.com/ZMenggg/startrail-pipeline/issues"
Changelog = "https://github.com/ZMenggg/startrail-pipeline/blob/main/CHANGELOG.md"

[project.scripts]
startrail = "startrail_pipeline.cli:main"

[tool.setuptools.packages.find]
include = ["startrail_pipeline*"]

[tool.setuptools.package-data]
"startrail_pipeline" = ["py.typed"]
